fix(SearchBar): alignment is now correct and main image is now adaptive

--- a/src/app/searchbar/searchbar.less
+++ b/src/app/searchbar/searchbar.less
@@ -5,7 +5,7 @@
 //}
 
 .search-box {
-  //position:absolute;
+  position:absolute;
   background: none repeat scroll 0 0 #000000;
   opacity: 0.7;
   margin: 0 auto;
@@ -18,15 +18,50 @@
   align-content: center;
   width:100%;
 }
-.search-box form {
-  height: 50px;
-  margin-top: auto;
-  margin-bottom: auto;
+
+div.centre-h
+{
+  //background-color: plum;
+  display: block;
   width: 80%;
-  padding-left: auto;
-  padding-right: auto;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+div.centre-v
+{
+  //background-color: yellow;
+  display: block;
+  text-align: left;
+}
+
+div.centre-v::before
+{
+  display: block;
+  content: " ";
+  height: 10%;
 
 }
+div.centre-v::after
+{
+  display: block;
+  content: " ";
+  height: 10%;
+}
+
+
+
+//.search-box div {
+//  height: 50px;
+//  margin-top: auto;
+//  margin-bottom: auto;
+//  width: 80%;
+//  padding-left: auto;
+//  padding-right: auto;
+//
+//}
 
 /*top:50%; !* Move the image down, so its top is half way down the container *!*/
 /*margin-top:-100px; !* Move the image back up half its height *!*/
